@@ -542,6 +542,12 @@
 			<artifactId>commons-beanutils</artifactId>
 			<version>1.8.3</version>
 		</dependency>
+		<!-- Password validation -->
+		<dependency>
+		    <groupId>org.passay</groupId>
+		    <artifactId>passay</artifactId>
+		    <version>1.3.1</version>
+		</dependency>
 		<!-- IA Managed Dependencies -->
 		<dependency>
 			<groupId>com.infiniteautomation.mango</groupId>
